--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -529,7 +529,7 @@ function compose(...funcs) {
 ```
 
 ## pipe
-接收一组函数，从前往后执行
+接收一组函数，从前往后执行，前面的运行结果作为后面的函数的参数
 ```javascript
 function pipe(...args) {
   return result => {
