--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -77,7 +77,28 @@ tags:
 - 分布在不同位置多台独立的“自治计算机”
 - 通信必须遵循共同的网络协议
 
+按分布范围，计算机网络里有局域网LAN和广域网WAN, 其中局域网的代表以太网，以及这两种网络最重要的区分点，局域网基于广播技术，广域网基于分组交换技术。
+
+### 概念
+带宽：在计算机网络中，网络带宽是指在单位时间（一般指的是1秒钟）内能传输的数据量，比如说你家的电信网络是100兆比特，意思是，一秒内最大的传输速率是100兆比特。
+吞吐量：吞吐量表示在单位时间内通过某个网络（或信道、接口）的数据量。
+
+带宽是说的是最大值速率，吞吐量说的是某时刻速率。但吞吐量不能超过最大速率。
+
+时延是指数据（报文/分组/比特流）从网络（或链路）的一端传送到另一端所需的时间。单位是s。 时延分一下几种：
+* 发送时延：就是说我跟你说话，从我开始说，到说话结束这段时间，就是发送时延。
+* 传播时延：信道上第一个比特开始，到最后一个比特达到主机接口需要的时间就是传播时延。
+* 排队时延：分组在经过网络传输时，要经过很多的路由器。但分组在进入路由器后要先在输入队列中排队等待处理。在路由器确定了转发接口后，还要在
+输出队列中排队等待转发，这就产生了排队时延。排队时延的长短往往却决于网络当时的通信量，当网络的通信量很大时会发生排队溢出，是分组丢失。
+* 路由器或主机在收到数据包时，要花费一定时间进行处理，例如分析数据包的首部，这就产生了处理时延。
+
+往返时间（RTT）：在计算机网络中，往返时间也是一个重要的性能指标，它表示从发送方发送数据开始，到发送方收到来自接收方的确认（接受方收到数据
+后便立即发送确认）总共经历的时间
+
 ### 以太网
+以太网是一种局域网技术，其规定了访问控制方法、传输控制协议、网络拓扑结构、传输速率等，完成数据链路层和物理层的一些内容，
+它采用一种称作CSMA/CD的媒体接入方法，另外的一些局域网技术，比如无线局域网等。
+
 交换机基于数据包的源MAC地址学习并存入MAC地址表。交换机MAC地址表的老化时间是300秒。
 
 转发方式：
@@ -101,6 +122,29 @@ tags:
 
 ### 网络协议
 网络协议是计算机网络和分布系统中互相通信间的对等层实体交换信息时必须遵守的规则的集合。
+
+### OSI七层
+#### 物理层
+物理层是规定传输媒体接口的标准，比如说，规定了电气特性，信号的电平用+10V - +15V表示二进制的0，用-10V - -15V表示二进制的1，只要网线能表
+示这个特性，就不管你用什么材料了。
+
+##### 光纤宽带上网是以什么样的形式传输数据呢？
+首先计算机网卡传输出来的数据是电信号，光纤传输的是光脉冲信号，有光脉冲表示1，无光脉冲表示0。而可见光的频率大约是10的8次方MHz，因此光纤通
+信系统的带宽远远大于其它各种传输媒体的带宽，所以我们计算机传输数据需要先把电信号转为光信号，然后光信号快到服务器的时候，再把光信号转为电信号。
+
+##### 物理层中继器
+线路上传输的信号功率会逐渐衰减，衰减到一定程度时将造成信号失真，因此会导致接收错误。中继器可以对信号进行再生和还原，增加信号的传输距离。
+
+需要注意的是，中继器两端连接不同的网段，而不是子网。不同的网段就是不同路由器连接的网络。
+
+#### 数据链路层
+数据链路层任务：
+* 封装成帧。数据链路层并不是无脑转发网络层的信息，需要封装。封装的网络数据包，在链路层就叫数据帧。
+* 透明传输。透明传输是指不管任何信息，都要原原本本的传输。帧的数据部分可能有跟帧首部完全一样的字符，这时候就要采取一定的措施。
+* 差错控制。差错控制是遗漏的信息会重新发送。差错控制的方法有CRC循环冗余码。
+* 差错纠正。差错纠正是链路层知道1，2，3，4，5个文件，丢失的两个文件到底是哪两个，并且能通过重新发送没有的文件来纠正。
+* 流量控制。比如说发送方发送速度特别快，接收方接收速度特别慢，会造成传输出错。流量控制的方法有滑动窗口协议，以及选择重传协议。
+这里需要注意的是，传输层TCP也有流量控制功能，区别在于TCP是端到端的流量控制，链路层是点到点（比如一个路由器到下一个路由器）。
 
 ## 为什么计算机内部选择二进制数表示
 - 技术实现简单，计算机是由逻辑电路组成，逻辑电路通常只有两个状态，开关的接通与断开，这两种状态正好可以用 “1” 和 “0” 表示;
