--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -680,23 +680,15 @@ function jsonStringify(data) {
 }
 ```
 
-## 实现JSON.parse
-
 ## 千分位分割
 ```javascript
 function thousandFormat (v) {
-  const validNumber = parseFloat(v);
-  if (isNaN(validNumber)) return '';
-  const numArr = String(validNumber).split('.');
-  const result = [];
-  for (var i = numArr[0].length - 1; i >= 0; i--) {
-    if (i % 3 === 0 && i !== numArr[0].length - 1) {
-      result.unshift(',');
-    }
-    result.unshift(numArr[0][i]);
-  }
-  if (numArr[1]) result.push(...numArr[1]);
-  return result.join('');
+  const numArr = v.toString().split('.');
+  let result = numArr[0].split('').reverse().reduce((acc, cur, i) => {
+    return (i % 3 === 0 && i !== 0) ? cur + ',' + acc : cur + acc;
+  }, '');
+  if (numArr[1]) result += '.' + numArr[1];
+  return result;
 }
 ```
 
