--- a/_posts/前端/HTML/2022-12-17-元素坐标和大小.md
+++ b/_posts/前端/HTML/2022-12-17-元素坐标和大小.md
@@ -31,7 +31,7 @@ offsetParent 是元素最接近的祖先。
 - 对于带有 position:fixed 的元素。
 
 ### offsetWidth/Height
-提供元素的完整大小（包括边框）
+提供元素的完整大小（包括边框），省略了小数，可能不精确
 ### clientTop/Left
 clientTop/clientLeft指padding外侧到border外边缘的距离，包含边框和滚动条（滚动条在左边的情况）.
 ### clientWidth/Height
