--- a/_posts/前端/react/2023-2-24-react.md
+++ b/_posts/前端/react/2023-2-24-react.md
@@ -88,10 +88,27 @@ function Welcome(props) {
 ```
 
 ### class组件
+
 ```javascript
 class Welcome extends React.Component {
   render() {
     return <h1>Hello, {this.props.name}</h1>;
+  }
+}
+```
+
+#### 设置默认 props 和类型
+
+```javascript
+import PropTypes from "prop-types";
+
+class Modal extends Component {
+  static propTypes = {
+    isOpen: PropTypes.bool.isRequired,
+  }
+  
+  static defaultProps = {
+    isOpen: false
   }
 }
 ```
@@ -922,6 +939,7 @@ https://react.docschina.org/docs/web-components.html
 ## Hook
 - 只在 React 函数（函数组件和自定义 Hook）中调用 Hook，不要在普通的 JavaScript 函数中调用 Hook。
 - 只在最顶层使用 Hook
+
 ### State Hook
 参数：唯一的参数就是初始 state
 返回值：当前状态和一个让你更新它的函数，类似 class 组件的 this.setState，但是它不会把新的 state 和旧的 state 进行合并。
@@ -944,17 +962,17 @@ function Example() {
 }
 ```
 ### Effect Hook
-- 通过使用这个 Hook，你可以告诉 React 组件需要在渲染后执行某些操作。
-- React 保证了每次运行 effect 的同时，DOM 都已经更新完毕。
-- 如果你的 effect 返回一个函数，React 会在每次重新渲染的时候都执行清除操作。
-- React 将按照 effect 声明的顺序依次调用组件中的每一个 effect。
+- `useEffect` 在渲染后执行，执行时 DOM 都已经更新完毕。
+- 如果你的 effect 返回一个函数，React 会在每次重新渲染或卸载的时候都执行清除操作。
+- useEffect 是一个 Hook，因此只能在 组件的顶层或自定义的 Hook 中调用它。
 
-提示：
-- 使用多个 Effect 实现关注点分离。使用 Hook 其中一个目的就是要解决 class 中生命周期函数经常包含不相关的逻辑，但又把相关逻辑分离到了几个不同方法中的问题。
-- 通过跳过 Effect 进行性能优化。
-  每次渲染后都执行清理或者执行 effect 可能会导致性能问题。在 class 组件中，我们可以通过在 componentDidUpdate 中添加对 prevProps 或 prevState 的比较逻辑解决。
-  在Effect Hook中，传递数组作为第二个参数即可。只有数组指定的变量改变时，才会重新调用Effect。
-  如果想执行只运行一次的 effect（仅在组件挂载和卸载时执行），可以传递一个空数组（[]）作为第二个参数。
+```typescript
+useEffect(setup, dependencies?)
+```
+
+每次渲染后都执行清理或者执行 effect 可能会导致性能问题。在 class 组件中，我们可以通过在 componentDidUpdate 中添加对 prevProps 或 
+prevState 的比较逻辑解决。在Effect Hook中，传递数组作为第二个参数即可。只有数组指定的变量改变时，才会重新调用Effect。如果想执行只运行
+一次的 effect（仅在组件挂载和卸载时执行），可以传递一个空数组（[]）作为第二个参数。如果忽略第二个参数，effect 每次渲染都会调用。
 
 ### 自定义Hook
 在 React 中解决共享组件之间的状态逻辑问题的有: render props，高阶组件和自定义Hook。
