--- a/_posts/前端/Vue/2023-8-10-Vue3总结.md
+++ b/_posts/前端/Vue/2023-8-10-Vue3总结.md
@@ -48,3 +48,22 @@ export default {
 
 ## 风格指南
 1. 组件命名PascalCase。
+
+## Uncaught ReferenceError: Cannot access 'useLoginStore' before initialization
+
+```vue
+<!--page.vue-->
+<!--这样的引入顺序会报错，不清楚为什么-->
+<!--要先引入utils-->
+<script setup>
+import {useLoginStore} from '../../store/module/login';
+import utils from '@/utils/utils';
+</script>
+```
+
+```javascript
+// utils
+import {useLoginStore} from '../store/module/login';
+import {store} from "../store/store";
+const loginStore = useLoginStore(store); // 这行报错
+```
