--- a/_posts/前端/Vue/2023-8-10-Vue3总结.md
+++ b/_posts/前端/Vue/2023-8-10-Vue3总结.md
@@ -57,7 +57,10 @@ export default {
 <!--要先引入utils-->
 <script setup>
 import {useLoginStore} from '../../store/module/login';
-import utils from '@/utils/utils';
+import utils from '@/utils/utils'; // 这行要最前
+
+const loginInfoStore = useLoginStore(store);
+const {userInfo} = loginInfoStore;
 </script>
 ```
 
@@ -65,5 +68,7 @@ import utils from '@/utils/utils';
 // utils
 import {useLoginStore} from '../store/module/login';
 import {store} from "../store/store";
-const loginStore = useLoginStore(store); // 这行报错
+
+const loginInfoStore = useLoginStore(store); // 这行报错
+const {userInfo} = loginInfoStore;
 ```
