--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -19,19 +19,9 @@ Vue是一个创建单页应用的框架。
 
 - Model：模型层。负责处理业务逻辑，泛指后端进行的各种业务逻辑处理和数据操控。
 - View：视图层：负责将数据模型转化为UI展示出来。
-- ViewModel：视图模型层，通过双向绑定用来连接Model和View。
+- ViewModel：视图模型层，通过双向绑定用来连接Model和View。限定 Model 和 View 只能通过 ViewModel 通信。
 
-Vue 框架就是充当了 MVVM 开发模式中的 ViewModel 层，负责 View 和 Model 之间通信的桥梁。开发时只需要关心 View 层的 HTML 代码和 Model 层的 JavaScript 逻辑就可以了。
-
-> MVC
-> 
-> Model：数据模型，用来存储数据
-> 
-> View：视图界面，用来展示UI界面和响应用户交互
-> 
-> Controller：控制器(大管家角色)，监听模型数据的改变和控制视图行为、处理用户交互
-
-框架的双向绑定让开发者不再需要频繁操作DOM，只需处理好viewModel，视图就会更新，实现数据驱动开发。
+> MVC 和 MVVM 不同的在于 Controller，监听模型数据的改变和控制视图行为、处理用户交互以及未限制数据流，Model 和 View 之间可以通信。
 
 ViewModel它的主要职责就是：
 - 数据变化后更新视图
@@ -55,7 +45,7 @@ ViewModel它的主要职责就是：
 ```javascript
 import Vue from 'vue';
 export const on = (function() {
-  if (!isServer && document.addEventListener) {
+  if (document.addEventListener) {
     return function(element, event, handler) {
       if (element && event && handler) {
         element.addEventListener(event, handler, false);
@@ -76,9 +66,9 @@ const ctx = '@@clickoutsideContext';
 let startClick;
 let seed = 0;
 
-!Vue.prototype.$isServer && on(document, 'mousedown', e => (startClick = e));
+on(document, 'mousedown', e => (startClick = e));
 
-!Vue.prototype.$isServer && on(document, 'mouseup', e => {
+on(document, 'mouseup', e => {
   nodeList.forEach(node => node[ctx].documentHandler(e, startClick));
 });
 
@@ -107,15 +97,16 @@ function createDocumentHandler(el, binding, vnode) {
 }
 
 export default {
+  // 被绑定到元素上时触发，仅一次
   bind(el, binding, vnode) {
     nodeList.push(el);
     const id = seed++;
     el[ctx] = {
       id,
       documentHandler: createDocumentHandler(el, binding, vnode),
-      // 指令绑定的表达式
+      // 指令绑定的表达式，冒号内的字符串
       methodName: binding.expression,
-      // 指令绑定的表达式的值
+      // 指令绑定的表达式的值，对表达式求值后得到的。
       bindingFn: binding.value
     };
   },
@@ -141,13 +132,9 @@ export default {
 ```
 
 ### vue 双向绑定的原理是什么
-数据劫持加上观察者模式，通过Object.defineProperty劫持变量的get和set，在数据变化时发布消息，通知订阅者，触发监听回调。
+数据劫持加上观察者模式，通过 `Object.defineProperty` 劫持变量的get和set，在数据变化时发布消息，通知订阅者，触发监听回调。
 
-Dep Watcher Observer
-
-Observer 数据劫持，Dep 发布消息，依赖手机。Watcher 订阅消息。
-
-首先是对数据进行监听，当监听的属性发生变化时则通知订阅者，订阅者更新就会执行对应的函数从而更新视图
+对数据进行监听，属性被依赖时收集订阅者，当监听的属性发生变化时则通知订阅者，订阅者更新就会执行对应的函数从而更新视图
 
 ### 什么是SPA
 SPA就是单页应用。通过动态重写当前页面与用户交互，避免了页面之间切换而频繁刷新。
