--- a/_posts/前端/TypeScript/2023-8-13-TS练习.md
+++ b/_posts/前端/TypeScript/2023-8-13-TS练习.md
@@ -9,9 +9,8 @@ catalog: true
 tags:
     - TypeScript
 ---
-# TS练习
 ## 泛型约束
-
+### 1
 ```typescript
 type User = {
     id: number;
@@ -35,8 +34,6 @@ function makeCustomer<T extends User>(u: T): T {
 T 是 User 的子类，子类包含父类属性和方法，但子类的属性和方法，父类不一定有。makeCustomer 函数要求返回 T 类型数据，那么返回值不仅要有父类的属性
 和方法，还要有 T 的属性和方法。所以有两种修改方法：
 
-1. 返回 T 类型的数据
-
 ```typescript
 function makeCustomer<T extends User>(u: T): T {
   return {
@@ -49,8 +46,6 @@ function makeCustomer<T extends User>(u: T): T {
 }
 ```
 
-2. 返回 T 类型的数据
-
 ```typescript
 function makeCustomer<T extends User>(u: T): User {
   return {
@@ -60,12 +55,91 @@ function makeCustomer<T extends User>(u: T): User {
 }
 ```
 
-3. 取对象值
+### 2
+```typescript
 const map = {
-1: "男",
-2: "女"
+  1: "男", 
+  2: "女"
 };
 
 const row = {sex:'1'}
 
+// error
+console.log(map[row.sex]);
+```
+
+```typescript
+interface Row {
+  sex: 1 | 2
+}
+const row: Row = {sex: 1};
+```
+
+```typescript
 console.log(map[row.sex as unknown as keyof typeof map]);
+```
+
+### 3
+```typescript
+interface ObjectType {
+  a: number
+}
+
+const obj: ObjectType = {};
+
+const keys = Object.keys(obj);
+// TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'ObjectType'.
+console.log(obj[keys[0]])
+```
+
+```typescript
+const keys = Object.keys(obj) as Array<keyof VirtualUser>;
+```
+
+### 3
+
+```typescript
+// 实现一个type类型，用于约束特殊时间格式的字符串。
+FormatDate<"DD-MM-YY">
+// 允许的字符串为:
+const date: FormatDate<"DD-MM-YY"> = "12-12-2024" | "12-02-2024"
+// 不允许的字符串为:
+const date: FormatDate<"DD-MM-YY"> = "112-12-2024" | "12-112-2024" | "12-12-12024"
+```
+
+```typescript
+type Seperator = '-' | '.' | '/';
+
+type Num = 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9;
+
+type Num2 = Num | 0
+
+// 19，20缩小范围
+type YY = `19${Num2}${Num2}` | `20${Num2}${Num2}`;
+
+// 0,1缩小范围
+type MM = `0${Num}` | `1${0 | 1 | 2}`;
+
+type DD = `${0}${Num}` | `${1 | 2}${Num2}` | `3${0 | 1}`;
+
+// extends 约束类型
+type GenStr<Type extends string> = 
+  Type extends 'YY'
+    ? YY
+    : Type extends 'MM'
+      ? MM
+      : DD;
+
+type FormatDate<Pattern extends string> = 
+  Pattern extends `${infer Aaa}${Seperator}${infer Bbb}${Seperator}${infer Ccc}`
+    ? Pattern extends `${Aaa}${infer Sep}${Bbb}${infer _}${Ccc}`
+      ? `${GenStr<Aaa>}${Sep}${GenStr<Bbb>}${Sep}${GenStr<Ccc>}`
+      : never
+    : never;
+
+const a: FormatDate<'YY-MM-DD'> = '2023-01-02';
+
+const b: FormatDate<'DD/MM/YY'> = '01/02/2024';
+
+const c: FormatDate<'DD/MM/YY'> = '2024-01-02';
+```
