--- a/_posts/前端/react/2023-2-24-react.md
+++ b/_posts/前端/react/2023-2-24-react.md
@@ -1050,7 +1050,743 @@ export default function Counter() {
 ```
 
 #### useLayoutEffect
-`useLayoutEffect` 在 DOM 被渲染前同步被调用，避免了页面闪烁的问题。
+`useLayoutEffect` 与 `useEffect` 基本一致，不同点在于它是同步执行的。
+
+`useLayoutEffect` 是在 DOM 更新之后，浏览器绘制之前的操作，避免了页面闪烁的问题。
+
+// TODO 待验证
+```javascript
+import { useState, useEffect, useLayoutEffect } from "react";
+
+const Index = () => {
+  const [count, setCount] = useState(0);
+  const [count1, setCount1] = useState(0);
+
+  useEffect(() => {
+    if(count === 0){
+      setCount(10 + Math.random() * 100)
+    }
+  }, [count])
+
+  useLayoutEffect(() => {
+    if(count1 === 0){
+      setCount1(10 + Math.random() * 100)
+    }
+  }, [count1])
+
+  return (
+    <>
+      <div>hello Hooks！</div>
+      <div>useEffect的count:{count}</div>
+      <div>useLayoutEffect的count:{count1}</div>
+    </>
+  );
+};
+
+export default Index;
+```
+在这个例子中，我们分别设置 count 和 count1 两个变量，初始值都为 0，然后分别通过 useEffect 和 useLayout 控制，通过随机值来变更两个变量的值。也就是说，count 和 count1 连续变更了两次。
+
+从结果上来看，count 要比 count1 更加抖动。
+
+这是因为两者的执行顺序，简要分析下：
+
+useEffect 执行顺序：setCount 设置 => 在 DOM 上渲染 => useEffect 回调 => setCount 设置 => 在 DOM 上渲染。
+useLayoutEffect 执行顺序：setCount 设置 => useLayoutEffect 回调 => setCount 设置 => 在 DOM 上渲染。
+可以看出，useEffect 实际进行了两次渲染，这样就可能导致浏览器再次回流和重绘，增加了性能上的损耗，从而会有闪烁突兀的感觉。
+
+### useContext
+用于设置全局共享数据，跨组件层级共享。
+
+```javascript
+// context is createdBy createContext api
+// value: value passed to the closest context.Provider in component tree.
+// If there is no such provider, then the returned value will be the defaultValue you have passed to createContext for that context.
+const value = useContext(context);
+```
+
+```javascript
+import { useState, createContext, useContext } from "react";
+import { Button } from "antd";
+
+const CountContext = createContext(-1);
+
+const Index = () => {
+  const [count, setCount] = useState(0);
+
+  return (
+    <>
+      <div>父组件中的count：{count}</div>
+      <Button type="primary" onClick={() => setCount((v) => v + 1)}>
+        点击+1
+      </Button>
+      <CountContext.Provider value={count}>
+        <Child />
+      </CountContext.Provider>
+    </>
+  );
+};
+
+const Child = () => {
+  const countChild = useContext(CountContext);
+
+  return (
+    <div style={{ marginTop: 10 }}>
+      子组件获取到的count: {countChild}
+      <Son />
+    </div>
+  );
+};
+
+const Son = () => {
+  const countSon = useContext(CountContext);
+
+  return <div style={{ marginTop: 10 }}>孙组件获取到的count: {countSon}</div>;
+};
+
+export default Index;
+```
+
+### useReducer
+`useReducer` 是单个组件的状态管理，跟 `useState` 相比是用于处理更复杂的状态变化。
+
+```javascript
+const [state, dispatch] = useReducer(
+    (state, action) => {}, 
+    initialArg,
+    init
+);
+```
+
+#### params
+- reducer: 函数，接收 state 和 action 两个参数，最终返回的值是新的 state
+- initialArg：初始默认值
+- init：惰性初始化，可选。
+
+#### result
+- state：数据源
+- dispatch：用于派发更新的 dispatchAction，可以认为是 useState 中的 setState
+
+> 惰性初始化是一种延迟创建对象的手段，直到被需要的第一时间才去创建。
+> 可以将用于计算 state 的逻辑提取到 reducer 外部，
+> 如果有 init，就会取代 initialArg。
+
+```javascript
+import { useReducer } from "react";
+import { Button } from "antd";
+
+const Index = () => {
+  const [count, dispatch] = useReducer((state, action) => {
+    switch (action?.type) {
+      case "add":
+        return state + action?.payload;
+      case "sub":
+        return state - action?.payload;
+      default:
+        return state;
+    }
+  }, 0);
+
+  return (
+    <>
+      <div>count：{count}</div>
+      <Button
+        type="primary"
+        onClick={() => dispatch({ type: "add", payload: 1 })}
+      >
+        加1
+      </Button>
+      <Button
+        type="primary"
+        style={{ marginLeft: 10 }}
+        onClick={() => dispatch({ type: "sub", payload: 1 })}
+      >
+        减1
+      </Button>
+    </>
+  );
+};
+
+export default Index;
+```
+
+### useMemo
+每次状态更新都会重新渲染，`useMemo` 函数就是为了优化这个渲染性能。
+
+`useMemo` 判断是否满足当前的限定条件来决定是否执行 callback 函数。它之所以能带来提升，是因为在依赖不变的情况下，会返回相同的引用，
+避免子组件进行无意义的重复渲染。
+
+```javascript
+const cacheData = useMemo(fn, deps)
+```
+
+#### params
+- fn：函数，函数的返回值会作为缓存值
+- deps：依赖项，数组，会通过数组里的值来判断是否进行 fn 的调用，如果发生了改变，则会得到新的缓存值。
+
+#### result
+- cacheData：更新之后的数据源，即 fn 函数的返回值，如果 deps 中的依赖值发生改变，将重新执行 fn，否则取上一次的缓存值。
+
+#### 例子
+
+```javascript
+import { useState } from "react";
+import { Button } from "antd";
+
+const usePow = (list) => {
+  return list.map((item) => {
+    console.log("我是usePow");
+    return Math.pow(item, 2);
+  });
+};
+
+const Index = () => {
+  const [flag, setFlag] = useState(true);
+
+  const data = usePow([1, 2, 3]);
+
+  return (
+    <>
+      <div>数字集合：{JSON.stringify(data)}</div>
+      <Button type="primary" onClick={() => setFlag((v) => !v)}>
+        状态切换{JSON.stringify(flag)}
+      </Button>
+    </>
+  );
+};
+
+export default Index;
+```
+
+在上面例子中，按钮点击后会调用 `usePow`，但状态切换和它是没有关联的，所以可以改成：
+
+```javascript
+const usePow = (list) => {
+  return useMemo(
+    () =>
+      list.map((item) => {
+        console.log(1);
+        return Math.pow(item, 2);
+      }),
+    []
+  );
+};
+```
+
+### useCallback
+`useCallback` 和 `useMemo` 作用，接收参数都一样，除了返回的是一个函数。
+
+#### 例子
+
+```javascript
+import { useState, useCallback, memo } from "react";
+import { Button } from "antd";
+
+const Index = () => {
+  let [count, setCount] = useState(0);
+  let [flag, setFlag] = useState(true);
+
+  const add = useCallback(() => {
+    setCount(count + 1);
+  }, [count]);
+
+  return (
+    <>
+      <TestButton onClick={() => setCount((v) => v + 1)}>普通点击</TestButton>
+      <TestButton onClick={add}>useCallback点击</TestButton>
+      <div>数字：{count}</div>
+      <Button type="primary" onClick={() => setFlag((v) => !v)}>
+        切换{JSON.stringify(flag)}
+      </Button>
+    </>
+  );
+};
+
+const TestButton = memo(({ children, onClick = () => {} }) => {
+  console.log(children);
+  return (
+    <Button
+      type="primary"
+      onClick={onClick}
+      style={children === "useCallback点击" ? { marginLeft: 10 } : undefined}
+    >
+      {children}
+    </Button>
+  );
+});
+
+export default Index;
+```
+
+### useImperativeHandle
+`useImperativeHandle` 暴露子组件的方法给父组件调用。
+
+```javascript
+useImperativeHandle(ref, createHandle, deps)
+```
+
+#### params
+- ref: `useRef`（父函数组件） 或 `forwardRef`（父类组件） 返回的 ref
+- createHandle：处理函数，返回值作为暴露给父组件的 ref 对象
+- deps：依赖项，依赖项如果更改，会形成新的 ref 对象。
+
+父组件是函数组件时：
+```javascript
+import { useState, useRef, useImperativeHandle } from "react";
+import { Button } from "antd";
+
+const Child = ({cRef}) => {
+
+  const [count, setCount] = useState(0)
+
+  useImperativeHandle(cRef, () => ({
+    add
+  }))
+
+  const add = () => {
+    setCount((v) => v + 1)
+  }
+
+  return <div>
+    <p>点击次数：{count}</p>
+    <Button onClick={() => add()}> 子组件的按钮，点击+1</Button>
+  </div>
+}
+
+const Index = () => {
+  const ref = useRef<any>(null)
+
+  return (
+    <>
+      <div>hello hooks！</div>
+      <div></div>
+      <Button
+        type="primary"
+        onClick={() =>  ref.current.add()}
+      >
+        父组件上的按钮，点击+1
+      </Button>
+      <Child cRef={ref} />
+    </>
+  );
+};
+
+export default Index;
+```
+
+父组件是类组件时：
+```javascript
+
+import { useState, useRef, useImperativeHandle, Component, forwardRef } from "react";
+import { Button } from "antd";
+
+const Child = (props, ref) => {
+
+  const [count, setCount] = useState(0)
+
+  useImperativeHandle(ref, () => ({
+    add
+  }))
+
+  const add = () => {
+    setCount((v) => v + 1)
+  }
+
+  return <div>
+    <p>点击次数：{count}</p>
+    <Button onClick={() => add()}> 子组件的按钮，点击+1</Button>
+  </div>
+}
+
+const ForwardChild = forwardRef(Child)
+
+class Index extends Component{
+  countRef = null
+  render(){
+    return   <>
+      <div>hello hooks！</div>
+      <div></div>
+      <Button
+        type="primary"
+        onClick={() => this.countRef.add()}
+      >
+        父组件上的按钮，点击+1
+      </Button>
+      <ForwardChild ref={node => this.countRef = node} />
+    </>
+  }
+}
+
+export default Index;
+```
+
+### useDebugValue
+useDebugValue： 可用于在 React 开发者工具中显示自定义 Hook 的标签。这个 Hooks 目的就是检查自定义 Hooks。
+
+```javascript
+useDebugValue(value, (status) => {})
+```
+
+#### params
+- value：判断的值；
+- callback：可选，这个函数只有在 Hook 被检查时才会调用，它接受 debug 值作为参数，并且会返回一个格式化的显示值。
+
+```javascript
+function useFriendStatus(friendID) {
+  const [isOnline, setIsOnline] = useState(null);
+
+  // ...
+
+  // 在开发者工具中的这个 Hook 旁边显示标签  
+  // e.g. "FriendStatus: Online"  useDebugValue(isOnline ? 'Online' : 'Offline');
+  return isOnline;
+}
+```
+
+### useSyncExternalStore
+useSyncExternalStore： 会通过强制的同步状态更新，使得外部 store 可以支持并发读取。
+
+注意： 这个 Hooks 并不是在日常开发中使用的，而是给第三方库 redux、mobx 使用的，因为在 React v18 中，主推的 Concurrent（并发）模式可能会出现状态不一致的问题（比如在 react-redux 7.2.6 的版本），所以官方给出 useSyncExternalStore 来解决此类问题。
+
+简单地说，useSyncExternalStore 能够让 React 组件在 Concurrent 模式下安全、有效地读取外接数据源，在组件渲染过程中能够检测到变化，并且在数据源发生变化的时候，能够调度更新。
+
+当读取到外部状态的变化，会触发强制更新，以此来保证结果的一致性。
+
+```javascript
+const state = useSyncExternalStore(
+    subscribe,
+    getSnapshot,
+    getServerSnapshot
+)
+```
+
+- subscribe：订阅函数，用于注册一个回调函数，当存储值发生更改时被调用。 此外，useSyncExternalStore 会通过带有记忆性的 getSnapshot 来判断数据是否发生变化，如果发生变化，那么会强制更新数据；
+- getSnapshot：返回当前存储值的函数。必须返回缓存的值。如果 getSnapshot 连续多次调用，则必须返回相同的确切值，除非中间有存储值更新；
+- getServerSnapshot：返回服务端（`hydration` 模式下）渲染期间使用的存储值的函数。
+
+- state：数据源，用于渲染 `UI 层`的数据源。
+
+```javascript
+import { useSyncExternalStore } from "react";
+import { Button } from "antd";
+import { combineReducers, createStore } from "redux";
+
+const reducer = (state = 1, action) => {
+  switch (action.type) {
+    case "ADD":
+      return state + 1;
+    case "DEL":
+      return state - 1;
+    default:
+      return state;
+  }
+};
+
+/* 注册reducer,并创建store */
+const rootReducer = combineReducers({ count: reducer });
+const store = createStore(rootReducer, { count: 1 });
+
+const Index = () => {
+  //订阅
+  const state = useSyncExternalStore(
+    store.subscribe,
+    () => store.getState().count
+  );
+
+  return (
+    <>
+      <div>Hooks！</div>
+      <div>数据源： {state}</div>
+      <Button type="primary" onClick={() => store.dispatch({ type: "ADD" })}>
+        加1
+      </Button>
+      <Button
+        style={{ marginLeft: 8 }}
+        onClick={() => store.dispatch({ type: "DEL" })}
+      >
+        减1
+      </Button>
+    </>
+  );
+};
+
+export default Index;
+```
+
+当我们点击按钮后，会触发 store.subscribe（订阅函数），执行 getSnapshot 后得到新的 count，此时 count 发生变化，就会触发更新。
+
+12. useTransition
+
+**useTransition：** 返回一个状态值表示过渡更新任务的等待状态，以及一个启动该过渡更新任务的函数。
+
+> 问：什么是过渡更新任务？
+>
+> 答：过渡任务是对比紧急更新任务所产生的。
+>
+> 紧急更新任务指，输入框、按钮等任务需要在视图上立即做出响应，让用户立马能够看到效果的任务。
+>
+> 但有时，更新任务不一定那么紧急，或者说需要去请求数据，导致新的状态不能够立马更新，需要一个 `loading...` 的状态，这类任务称为过渡任务。
+
+我们再来举个比较常见的例子帮助理解紧急更新任务和过渡更新任务。
+
+当我们有一个 `input` 输入框，这个输入框的值要维护一个很大列表（假设列表有 1w 条数据），比如说过滤、搜索等情况，这时有两种变化：
+
+1.  input 框内的变化；
+
+2.  根据 input 的值，1w 条数据的变化。
+
+
+input 框内的变化是实时获取的，也就是受控的，此时的行为就是紧急更新任务。而这 1w 条数据的变化，就会有过滤、重新渲染的情况，此时这种行为被称为过渡更新任务。
+
+**基本使用：**
+
+```
+const [isPending, startTransition] = useTransition();
+
+
+```
+
+**Result：**
+
+*   isPending：布尔值，过渡状态的标志，为 true 时表示等待状态；
+
+*   startTransition：可以将里面的任务变成过渡更新任务。
+
+
+**案例：**
+
+```
+import { useState, useTransition } from "react";
+import { Input } from "antd";
+
+const Index = () => {
+  const [isPending, startTransition] = useTransition();
+  const [input, setInput] = useState("");
+  const [list, setList] = useState([]);
+
+  return (
+    <>
+      <div>Hooks！</div>
+      <Input
+        value={input}
+        onChange={(e) => {
+          setInput(e.target.value);
+          startTransition(() => {
+            const res = [];
+            for (let i = 0; i < 10000; i++) {
+              res.push(e.target.value);
+            }
+            setList(res);
+          });
+        }}
+      />
+      {isPending ? (
+        <div>加载中...</div>
+      ) : (
+        list.map((item, index) => <div key={index}>{item}</div>)
+      )}
+    </>
+  );
+};
+
+export default Index;
+
+
+```
+
+从上述的代码可以看到，我们通过 input 去维护了 1w 条数据，通过 isPending 的状态来控制是否展示完成。
+
+13. useDeferredValue
+--------------------
+
+useDeferredValue：可以让状态滞后派生，与 useTransition 功能类似，推迟屏幕优先级不高的部分。
+
+在一些场景中，渲染比较消耗性能，比如输入框。输入框的内容去调取后端服务，当用户连续输入的时候会不断地调取后端服务，其实很多的片段信息是无用的，这样会浪费服务资源， React 的响应式更新和 JS 单线程的特性也会导致其他渲染任务的卡顿。而 useDeferredValue 就是用来解决这个问题的。
+
+> 问：useDeferredValue 和 useTransition 怎么这么相似，两者有什么异同点？
+>
+> 答：useDeferredValue 和 useTransition 从本质上都是标记成了过渡更新任务，不同点在于 useDeferredValue 是将原值通过过渡任务得到新的值， 而 useTransition 是将紧急更新任务变为过渡任务。
+>
+> 也就是说，useDeferredValue 用来处理数据本身，useTransition 用来处理更新函数。
+
+**基本使用：**
+
+```
+const deferredValue = useDeferredValue(value);
+
+
+```
+
+**Params：**
+
+*   value：接受一个可变的值，如`useState`所创建的值。
+
+
+**Result：**
+
+*   deferredValue：返回一个延迟状态的值。
+
+
+**案例：**
+
+```
+import { useState, useDeferredValue } from "react";
+import { Input } from "antd";
+
+const getList = (key) => {
+  const arr = [];
+  for (let i = 0; i < 10000; i++) {
+    if (String(i).includes(key)) {
+      arr.push(<li key={i}>{i}</li>);
+    }
+  }
+  return arr;
+};
+
+const Index = () => {
+  //订阅
+  const [input, setInput] = useState("");
+  const deferredValue = useDeferredValue(input);
+  console.log("value：", input);
+  console.log("deferredValue：", deferredValue);
+
+  return (
+    <>
+      <div>Hooks！</div>
+      <Input value={input} onChange={(e) => setInput(e.target.value)} />
+      <div>
+        <ul>{deferredValue ? getList(deferredValue)}</ul>
+      </div>
+    </>
+  );
+};
+
+export default Index;
+
+
+```
+
+上述的功能类似于搜索，从 1w 个数中找到输入框内的数。
+
+> 问：什么场景下使用`useDeferredValue` 和 `useTransition` ？
+>
+> 答：通过上面的两个例子介绍我们知道，useDeferredValue 和 useTransition 实际上都是用来处理数据量大的数据，比如，百度输入框、散点图等，都可以使用。它们并不适用于少量数据。
+>
+> 但在这里更加推荐使用 useTransition，因为 useTransition 的性能要高于 useDeferredValue，除非像一些第三方的 Hooks 库，里面没有暴露出更新的函数，而是直接返回值，这种情况下才去考虑使用 useDeferredValue。
+>
+> 这两者可以说是一把双刃剑，在数据量大的时候使用会优化性能，而数据量低的时候反而会影响性能。
+
+14. useInsertionEffect
+----------------------
+
+**useInsertionEffect：** 与 useEffect 一样，但它在所有 DOM 突变之前同步触发。
+
+**注意：**
+
+*   useInsertionEffect 应限于 css-in-js 库作者使用。在实际的项目中优先考虑使用 useEffect 或 useLayoutEffect 来替代；
+
+*   这个钩子是为了解决 `CSS-in-JS` 在渲染中注入样式的性能问题而出现的，所以在我们日常的开发中并不会用到这个钩子，但我们要知道如何去使用它。
+
+
+**基本使用：**
+
+```
+useInsertionEffect(callback,deps)
+
+
+```
+
+**案例：**
+
+```
+import { useInsertionEffect } from "react";
+
+const Index = () => {
+  useInsertionEffect(() => {
+    const style = document.createElement("style");
+    style.innerHTML = `
+      .css-in-js{
+        color: blue;
+      }
+    `;
+    document.head.appendChild(style);
+  }, []);
+
+  return (
+    <div>
+      <div class>，一起学Hooks吧！</div>
+    </div>
+  );
+};
+
+export default Index;
+
+
+```
+
+**执行顺序：** 在目前的版本中，React 官方共提供三种有关副作用的钩子，分别是 useEffect、useLayoutEffect 和 useInsertionEffect，我们一起来看看三者的执行顺序：
+
+```
+import { useEffect, useLayoutEffect, useInsertionEffect } from "react";
+
+const Index = () => {
+  useEffect(() => console.log("useEffect"), []);
+
+  useLayoutEffect(() => console.log("useLayoutEffect"), []);
+
+  useInsertionEffect(() => console.log("useInsertionEffect"), []);
+
+  return <div>，Hooks！</div>;
+};
+
+export default Index;
+
+
+```
+
+从效果上来看，可知三者的执行的顺序为：useInsertionEffect > useLayoutEffect > useEffect。
+
+15. useId
+---------
+
+**useId：** 是一个用于生成横跨服务端和客户端的稳定的唯一 ID ，用于解决服务端与客户端产生 ID 不一致的问题，更重要的是保证了 React v18 的 `streaming renderer （流式渲染）`中 id 的稳定性。
+
+这里我们简单介绍一下什么是 `streaming renderer`。
+
+在之前的 React ssr 中，hydrate（ 与 render 相同，但作用于 ReactDOMServer 渲染的容器中 ）是整个渲染的，也就是说，无论当前模块有多大，都会一次性渲染，无法局部渲染。但这样就会有一个问题，如果这个模块过于庞大，请求数据量大，耗费时间长，这种效果并不是我们想要看到的。
+
+于是在 React v18 上诞生出了 streaming renderer （流式渲染），也就是将整个模块进行拆分，让加载快的小模块先进行渲染，大的模块挂起，再逐步加载出大模块，就可以就解决上面的问题。
+
+此时就有可能出现：服务端和客户端注册组件的顺序不一致的问题，所以 `useId` 就是为了解决此问题而诞生的，这样就保证了 `streaming renderer` 中 ID 的稳定性。
+
+**基本使用：**
+
+```
+const id = useId();
+
+
+```
+
+**Result：**
+
+*   id：生成一个服务端和客户端统一的`id`。
+
+
+**案例：**
+
+```
+import { useId } from "react";
+
+const Index = () => {
+  const id = useId();
+
+  return <div id={id}>一起学Hooks吧！</div>;
+};
+
+export default Index;
+
+
+```
 
 ### 自定义Hook
 在 React 中解决共享组件之间的状态逻辑问题的有: render props，高阶组件和自定义Hook。
@@ -1058,6 +1794,85 @@ export default function Counter() {
 - 自定义 Hook 是一个函数，其名称以 “use” 开头，函数内部可以调用其他的 Hook。
 - 返回值和参数没有限制
 - 在两个组件中使用相同的 Hook 不会共享 state。
+
+### 什么是自定义 hooks
+
+自定义 hooks 是在`react-hooks`基础上的一个拓展，可以根据业务需要制定满足业务需要的 hooks，更注重的是逻辑单元。通过业务场景不同，我们到底需要`react-hooks`做什么，怎么样把一段逻辑封装起来，做到复用，这是自定义 hooks 产生的初衷。
+
+### 如何设计一个自定义 hooks，设计规范
+
+#### 逻辑 + 组件
+
+hooks 专注的就是**逻辑复用**， 我们的项目，不仅仅停留在组件复用的层面上。hooks 让我们可以将一段通用的逻辑存封起来。将我们需要它的时候，开箱即用即可。
+
+#### 1. 驱动条件
+
+`hooks`本质上是一个函数。函数的执行，决定于无状态组件自身的执行上下文。每次函数的执行 (本质上就是组件的更新) 就是执行自定义`hooks`的执行，由此可见组件本身执行和 hooks 的执行如出一辙。
+
+那么`prop`的修改,`useState,useReducer`使用是无状态组件更新条件，那么就是驱动 hooks 执行的条件。
+
+#### 2. 通用模式
+
+我们设计的自定义`react-hooks`应该是长的这样的。
+
+```
+const [ xxx , ... ] = useXXX(参数A,参数B...)
+
+
+```
+
+在我们在编写自定义 hooks 的时候，要**特别～特别**关注的是**传进去什么**，**返回什么**。 返回的东西是我们真正需要的。更像一个工厂，把原材料加工，最后返回我们。
+
+#### 3. 条件限定
+
+如果自定义 hooks 没有设计好，比如返回一个改变 state 的函数，但是没有加条件限定，就有可能造成不必要的上下文的执行，更有甚的是导致组件的循环渲染执行。
+
+比如: 我们写一个非常简单 hooks 来**格式化数组将小写转成大写**。
+
+```
+import React , { useState } from 'react'
+/* 自定义hooks 用于格式化数组将小写转成大写 */
+function useFormatList(list){
+   return list.map(item=>{
+       return item.toUpperCase()
+   })
+}
+/* 父组件传过来的list = [ 'aaa' , 'bbb' , 'ccc'  ] */
+function index({ list }){
+   const [ number ,setNumber ] = useState(0)
+   const newList = useFormatList(list)
+   return <div>
+       <div class >
+          { newList.map(item=><div key={item} >{ item }</div>) }
+        </div>
+        <div class >
+            <div>{ number }</div>
+            <button onClick={()=> setNumber(number + 1) } >add</button>
+        </div>
+   </div>
+}
+export default index
+
+
+```
+
+上述问题，我们格式化父组件传递过来的`list`数组，并将小写变成大写，但是当我们点击`add`。 理想状态下数组不需要重新`format`，但是实际跟着执行`format`。无疑增加了性能开销。
+
+**所以我们在设置自定义 hooks 的时候，一定要把条件限定 - 性能开销加进去。**
+
+于是乎我们这样处理一下。
+
+```
+function useFormatList(list) {
+    return useMemo(() => list.map(item => {
+        return item.toUpperCase()
+    }), [])
+}
+
+
+```
+
+所以一个好用的自定义 hooks, 一定要配合`useMemo, useCallback` 等`api`一起使用。
 
 ## ErrorBoundry
 `ErrorBoundry` 捕获子组件 JS 错误并可以显示兜底的页面。
