--- a/_posts/前端/浏览器/2023-2-1-浏览器事件循环.md
+++ b/_posts/前端/浏览器/2023-2-1-浏览器事件循环.md
@@ -49,7 +49,7 @@ Web Workers 没有访问 DOM 的权限，因此，它们对同时使用多个 CP
 ## 总结
 更详细的事件循环算法（尽管与 [规范](https://html.spec.whatwg.org/multipage/webappapis.html#event-loop-processing-model) 相比仍然是简化过的）：
 
-1. 从 宏任务 队列（例如 “script”）中出队（dequeue）并执行最早的任务。
+1. 从 宏任务 队列（例如 “script”）中出队（dequeue）并执行最早的任务。(一开始整个脚本就是一个宏任务)
 2. 执行所有 微任务：
    - 当微任务队列非空时：
      - 出队（dequeue）并执行最早的微任务。
