--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -328,14 +328,19 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 
 浮点数的表示为 N = rE * M ， r相当于底数，是2（跟10进制科学计数法是10时意思是一样的），E代表阶码，M代表尾数。
 
-## 不同进制的表示
-有后缀和下标表示。如二进制：(10)B 和 (10)₂
+## R进制
+### 不同进制的表示
+有后缀和下标（即对应进制的数字）表示。如二进制：(10)B 和 (10)₂
 八进制，十进制和十六进制的后缀分别是O, D, H。
+
+> 16进制中 10 开始的数字用从大写字母 A 开始的字母来表示。
 
 ## 不同进制的转换
 1、任意进制转十进制。
-- 每位数字乘以对应进制的位数次方后相加，位从0开始。例如：2进制的 101.1 = 1 x 2的2次方 + 0 x 2的1次方 + 1 x 2的0次方 + 1 x 2的-1次方
+- 每位数字乘以对应进制的位数次方后相加，位从0开始，从右开始数。例如：2进制的 101.1 = 1 x 2的2次方 + 0 x 2的1次方 + 1 x 2的0次方 + 1 x 2的-1次方
 - JS：toString(radix)
+
+> 涉及数值运算的时候，用后缀或下标表示法书写结果。 
 
 2、十进制整数转为任意进制。
 - 除商取余法。除对应进制。将余数由后往前拼接得到结果。
