--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -886,16 +886,16 @@ console.log(square.area);
 Promise 是一个对象，它代表了一个异步操作的最终完成或者失败。由于它的then方法和catch、finally方法会返回一个新的Promise所以可以允许我们链式调用，解决了传统的回调地狱问题。
 
 1. Promise的状态一经改变就不能再改变。
-2. .then和.catch都会返回一个新的Promise。
+2. .then, .catch 和 .finally都会返回一个新的Promise。
 3. catch不管被连接到哪里，都能捕获上层未捕捉过的错误。
 4. 在Promise中，返回任意一个非 promise 的值都会被包裹成 promise 对象，例如return 2会被包装为return Promise.resolve(2)。 
-5. Promise 的 .then 或者 .catch 可以被调用多次, 但如果Promise内部的状态一经改变，并且有了一个值，那么后续每次调用.then或者.catch的时候都会直接拿到该值。
+5. Promise 的 .then 或者 .catch 可以被调用多次, 但如果Promise内部的状态一经改变，并且有了一个值，那么后续每次调用.then或者.catch的时候都会拿到该值。
 6. .then 或者 .catch 中 return 一个 error 对象并不会抛出错误，所以不会被后续的 .catch 捕获。
 7. .then 或 .catch 返回的值不能是 promise 本身，否则会造成死循环。
 8. .then 或者 .catch 的参数期望是函数，传入非函数则会发生值透传。
-9. .then方法是能接收两个参数的，第一个是处理成功的函数，第二个是处理失败的函数，再某些时候你可以认为catch是.then第二个参数的简便写法。
-10. .finally方法也是返回一个Promise，他在Promise结束的时候，无论结果为resolved还是rejected，都会执行里面的回调函数。
-11. .finally()方法的回调函数不接受任何的参数，在.finally()函数中是没法知道Promise最终的状态是resolved还是rejected的
+9. .then方法是能接收两个参数的，第一个是处理成功的函数，第二个是处理失败的函数。和 catch 的区别就是，如果它和 catch 同时存在，promise 中的报错只会被 then 第二个函数捕获。
+10. .finally 在Promise结束的时候，无论结果为resolved还是rejected，都会执行里面的回调函数。
+11. .finally()方法的回调函数不接收任何的参数，在.finally()函数中是没法知道Promise最终的状态是resolved还是rejected的
 12. 它最终返回的默认会是一个上一次的Promise对象值，不过如果抛出的是一个异常则返回异常的Promise对象。
 13. Promise.all()的作用是接收一组异步任务，然后并行执行异步任务，并且在所有异步操作执行完后才执行回调。
 14. .race()的作用也是接收一组异步任务，然后并行执行异步任务，只保留取第一个执行完成的异步操作的结果，其他的方法仍在执行，不过执行结果会被抛弃。
@@ -905,7 +905,13 @@ Promise 是一个对象，它代表了一个异步操作的最终完成或者失
 ### null 和 undefined 区别
 - null 表示空，此处不应该有值；而 undefined 表示未定义，变量声明了未赋值就是 undefined。
 - 转换数字结果不同。Number(null)为0，undefined 为 NaN。
-- null 是对象原型链终点
+
+在使用场景上：
+
+`null` 是原型链的终点。
+
+- 变量声明了未赋值或函数被调用时未传入指定参数，值就等于 `undefined`。
+- 函数没有返回值时，默认为 `undefined`
 
 ### 点击一个input依次触发的事件
 `
