--- a/_posts/前端/HTML/2022-12-17-元素坐标和大小.md
+++ b/_posts/前端/HTML/2022-12-17-元素坐标和大小.md
@@ -31,15 +31,19 @@ offsetParent 是元素最接近的祖先。
 - 对于带有 position:fixed 的元素。
 
 ### offsetWidth/Height
-提供元素的完整大小（包括边框），省略了小数，可能不精确
+包含宽度和 padding（包括边框），省略了小数，可能不精确
 ### clientTop/Left
 clientTop/clientLeft指padding外侧到border外边缘的距离，包含边框和滚动条（滚动条在左边的情况）.
 ### clientWidth/Height
-clientWidth/Height包括了 “content width” 和 “padding”，但不包括滚动条宽度。
+clientWidth/Height包括了宽度和 padding，但不包括滚动条宽度。
 
 假如一个 box-sizing: content-box， width: 300px 的元素，带有垂直滚动条，clientWidth 就是300 - 垂直滚动条宽度 + 左右padding。
 ### scrollWidth/Height
 scrollWidth/Height像clientWidth/clientHeight，但它们还包括滚动出（隐藏）的部分
+
+scrollWidth(滚动宽度,包含滚动条的宽度)=scrollLeft(左边卷去的距离)+clientWidth(可见部分宽度);
+
+需要注意的是，上面这三个属性，都取的是溢出元素的父级元素属性。而不是溢出元素本身。
 ### scrollTop/scrollLeft
 scrollTop/scrollLeft已滚动距离，可修改
 ### 不要从 CSS 中获取 width/height
@@ -51,12 +55,38 @@ getComputedStyle(elem).width 可能是带px的宽度、也可能是auto，另外
 document.documentElement 的 clientWidth/clientHeight 返回窗口的宽高（不含滚动条）。
 
 window.innerWidth/innerHeight包括了滚动条。
+
+window.screen -- 屏幕的宽高
 ### 文档的宽高
 从理论上讲，由于根文档元素是 document.documentElement，并且它包围了所有内容，因此我们可以通过使用 documentElement.scrollWidth/scrollHeight 来测量文档的完整大小。
 但不一定能正常返回想要的结果，为了可靠地获得完整的文档高度，我们应该采用以下这些属性的最大值：
 ```javascript
 let scrollHeight = Math.max( document.body.scrollHeight, document.documentElement.scrollHeight, document.body.offsetHeight, document.documentElement.offsetHeight, document.body.clientHeight, document.documentElement.clientHeight );
 ```
+
+### 显示像素比
+显示设备像素比 = 显示设备的物理像素分辨率 / 显示设备CSS像素分辨率
+
+显示分辨率 = 屏幕水平方向的像素点数 * 屏幕垂直方向的像素点数
+
+> 像素：屏幕中最小的色块，每个色块称之为一个像素（Pixel）
+
+window.devicePixelRatio = 1.25 就代表一个css逻辑像素对应1.25个物理像素。
+
+笔记本电脑的 devicePixelRatio 是缩放设置决定的。
+
+> 截图软件显示的分辨率是物理像素，和js、css读取到的不一定相同。
+
+### mousedown 事件对象相关属性
+event.clientX，event.clientY, event.offsetX 和 event.offsetY 关系
+
+clientY 相对于可视区域顶部，offsetY相对于元素自身顶部。screenY相对于屏幕顶部。pageX是clientX+scrollLeft
+
+```javascript
+event.movementX = event.screenX - prevEvent.screenX;
+event.movementY = event.screenY - prevEvent.screenY;
+```
+
 ## 滚动
 ### 文档的滚动
 在大多数浏览器中，我们可以使用 document.documentElement.scrollLeft/scrollTop，但在较旧的基于 WebKit 的浏览器中则不行，应该使用 document.body 而不是 document.documentElement。
