--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -252,6 +252,8 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 
 定点数整数和小数都可以用原码，反码，补码表示，整数还可以用移码表示，具体什么意思我们稍后介绍。
 
+> 在计算机中，小数点不占二进制位数
+
 #### 原码
 原码就是用尾数表示真值的绝对值，符号位0表示正数，1表示负数。
 
@@ -383,9 +385,20 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 而0.1和0.2转换成二进制是无限循环的。所以0.1+0.2!==0.3
 
 4、十进制份数转二进制
-可以将分数拆分为更小的分数，将分数转为以2为底的负幂次方数的和，顺序是从大到小。转为二进制时，从2的负一次方开始找，看看和里面有没有这个数，没有的话对应二进制为0。
+可以将分数转为以2为底的负幂次方数的更小的分数的和，顺序是从大到小。然后按顺序从2的负一次方开始找，也就是二分之一开始，看看和里面有没有这个数，没有的话对应二进制为0。
+（小数点后第一位对应2的负一次方）。
 
-如53/64，2的负一次方是二分之一，2的负二次方是四分之一，2的负二次方是八分之一。可以分为32/64，16/64，4/64和1/64的和。对应着二进制(0.110101)₂
+如53/64，2的负一次方是二分之一，2的负二次方是四分之一，2的负三次方是八分之一。可以分为32/64，16/64，4/64和1/64的和。对应着二进制(0.110101)₂
+
+5、二进制转八进制
+三位合一法：从低位到高位每3位二进制转为1位八进制，然后按原顺序取值。
+
+6、二进制转十六进制
+四位合一法。
+
+7、八（十六）进制转二进制
+每1位八进制进制转3位二进制
+每1位十六进制进制转4位二进制
 
 ## JavaScript中的进制
 ### 进制表示
