--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -14,10 +14,7 @@ tags:
 ## instanceof
 ```javascript
 function _instanceof (target, ancestor) {
-  if (typeof target !== 'object' && typeof target !== 'function' || target === null) {
-    return false;
-  }
-  let proto = target.__proto__;
+  let proto = Object.getPrototypeOf(target);
   while (proto) {
     if (proto === ancestor.prototype) {
       return true;
@@ -923,6 +920,20 @@ function allSort(target) {
     }
     return result;
 }
+```
+
+## 检测是否为空对象
+通过使用Es6的Reflect静态方法判断他的长度就可以判断是否是空数组了，也可以通过**Object.keys()**来判断
+
+## 一步从时间中提取年月日时分秒
+由于toISOString会丢失时区，导致时间差八小时，所以在格式化之前我们加上八个小时时间即可
+
+```javascript
+function extract(date){
+    const d = new Date(new Date(date).getTime() + 8*3600*1000);
+    return new Date(d).toISOString().split(/[^0-9]/).slice(0, -1);
+}
+console.log(extract(new Date())) // ['2022', '09', '19', '18', '06', '11', '187']
 ```
 
 ## 资料
