--- a/_posts/生活/如何制定目标.md
+++ b/_posts/生活/如何制定目标.md
@@ -4,8 +4,17 @@
 ### 确定目标
 通过学习，工作，生活等方面按优先级列出梦想清单
 
-### 拆分目标，倒推达成条件
+### 分解目标，倒推达成条件
 将梦想一步一步逆向分解到可执行环节（到最后执行环节可以稍微灵活点）。以目标为导向，反过来倒推达成条件。
+
+#### 分解的原则
+如何把握分解的颗粒度来保证和评估你的目标是否靠谱呢？
+
+1. 目标必须是具体的（Specific）
+2. 目标必须是可以衡量的（Measurable）
+3. 目标必须是可以达到的（Attainable）
+4. 目标必须和其他目标具有相关性（Relevant）
+5. 目标必须具有明确的截止期限（Time-based）
 
 #### 具体执行计划
 按五年，一年，月，周，日单位计划。
