--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -255,7 +255,7 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 > 在计算机中，小数点不占二进制位数
 
 #### 原码
-原码就是用尾数表示真值的绝对值，符号位0表示正数，1表示负数。
+原码就是用尾数表示真值的绝对值，符号位（最高位）0表示正数，1表示负数。
 
 假设我们机器字长为8位，我们拿 +19和 -19来解释一下。
 ![img.png](/img/+19和-19.png)
@@ -265,23 +265,21 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 下面是定点小数的表示：
 ![img.png](/img/+0.75和-0.75.png)
 
-定点整数原码取值范围：-2的N-1次方减1至2的N-1次方减1
-
 #### 反码
 正数的反码 = 原码
 
 负数的反码，则数值位全部取反，符号位不变
 
-定点整数反码取值范围：-2的N-1次方减1至2的N-1次方减1
+定点整数原码，反码取值范围：-2的N-1次方减1至2的N-1次方减1
 
 #### 补码
 正数的补码 = 原码
 
-负数的补码 = 反码 + 1
+负数的补码 = 负数的反码 + 1
 
 在计算机中均采用补码表示
 
-补码算术运算过程中符号位和数值位采用同样的运算规则。
+补码算术运算过程中符号位和数值位都参与运算。
 
 定点整数的补码取值范围：-2的N-1次方至2的N-1次方减1
 
