--- a/_posts/生活/如何做好人生规划.md
+++ b/_posts/生活/如何做好人生规划.md
@@ -2,7 +2,7 @@
 每五年是一个人生计划，五年理解为一辈子。
 
 ### 确定目标
-通过学习，工作，生活等方面按优先级列出梦想清单
+通过学习，工作，生活等方面按优先级列出梦想清单，当下及未来想做的所有事。还找不到就模仿你想成为的人。
 
 ### 分解目标，倒推达成条件
 将梦想一步一步逆向分解到可执行环节（到最后执行环节可以稍微灵活点）。以目标为导向，反过来倒推达成条件。
@@ -13,15 +13,21 @@
 1. 目标必须是具体的（Specific）
 2. 目标必须是可以衡量的（Measurable）
 3. 目标必须是可以达到的（Attainable）
-4. 目标必须和其他目标具有相关性（Relevant）
+4. 目标必须和其他目标具有相关性（Relevant）（例如：当个顾家的男人，符合原则的是“发工资了给父母买衣服”而不是“多挣钱”）
 5. 目标必须具有明确的截止期限（Time-based）
 
-#### 具体执行计划
-按五年，一年，月，周，日单位计划。
+### 人生计划划分的维度
+按五年，一年，月，周，日单位来将计划分解。
 
-以周为时间单位进行部署和调节，日做到可执行。
+### 具体执行
+以周为时间单位进行部署和调节，每周末确定下周计划。
 
-每日复盘：
+每日计划要做到可执行。
+
+### 每日复盘
+每天写复盘日记来总结和反思，此外还能做到及时调整，因为可能计划赶不上变化。
+
+模板：
 * 计划完成情况，为什么没完成，如何改正。
 * 本年最重要目标，本周，本月最重要目标
 * 反省人际关系是否妥当，情绪管理，事项安排妥当
