--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -1972,6 +1972,10 @@ var obj = {
 obj.print();
 ```
 
+## 在vue中动态的引入图片为什么要使用require？
+因为动态添加的src，编译过后的文件地址和被编译过后的资源文件地址不一致，从而无法正确引入资源。而使用require，返回的就是资源文件被编译后的文件地址，
+从而可以正确的引入资源
+
 // TODO
 
 虚拟列表怎么实现?
