--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -60,10 +60,18 @@ tags:
 - 最后执行指令完毕，如果我们要打印console.log(a)的话，a因为本质上是一个内存地址，cpu会根据内存地址，找到这个地址里存放的值，也就是console.log显示的值
 - 获取到要显示的值后，存储器直接将数据传给显示器，这样我们就可以在屏幕上看到2这个结果了
 
-### 存储系统
-速度从快到慢包括 CPU 的寄存器， cache，内存（主存）RAM 和 ROM 以及外存（辅存）硬盘、光盘、U盘等。
+### 多级存储结构
+多级系统的划分是为了解决存储容量、成本和速度之间的矛盾。
 
-多级存储结构包括 cache 缓存-主存层次和主存-辅存层次。前者缓和 CPU 和主存之间的速率矛盾，后者逻辑扩大主存空间。
+速度从快到慢：
+- CPU 的寄存器
+- cache（相联存储器）（主存和CPU速度不匹配，需要 cache）
+- 内存（主存）RAM 和 ROM
+- 外存（辅存）硬盘、光盘、U盘等
+
+采用虚拟存储器扩大了用户编程的地址空间。
+
+多级存储结构包括 cache 缓存-主存层次和主存-辅存层次。前者缓和 CPU 和主存之间的速率矛盾，后者逻辑上扩大主存空间，前者实现是通过硬件，后者是通过软硬件。
 
 局部性原理是层次化存储结构的支撑
 - 时间局部性：刚被访问的内容，立即又被访问。
@@ -123,7 +131,15 @@ tags:
 ### 网络协议
 网络协议是计算机网络和分布系统中互相通信间的对等层实体交换信息时必须遵守的规则的集合。
 
-### OSI七层
+### OSI模型
+它是一套普遍适用的规范，使全球计算机可进行通信。
+
+OSI 中定义了每层的作用，定义每层作用的是协议，协议是约定，具体内容是规范。
+
+下层为上层提供服务，每层实现功能的活动元素称为实体。
+
+不同主机的相同层次称为对等层，使用相同的网络协议。
+
 #### 物理层
 物理层是规定传输媒体接口的标准，比如说，规定了电气特性，信号的电平用+10V - +15V表示二进制的0，用-10V - -15V表示二进制的1，只要网线能表
 示这个特性，就不管你用什么材料了。
