--- a/_posts/前端/JavaScript/事件/2022-12-26-事件.md
+++ b/_posts/前端/JavaScript/事件/2022-12-26-事件.md
@@ -32,7 +32,7 @@ addEventListener(..., true) 的处理程序（true 是 {capture: true} 的一个
 
 引发事件的那个嵌套层级最深的元素被称为目标元素,可以通过 event.target 访问。注意与 this（=event.currentTarget）之间的区别：
 - event.target —— 是引发事件的“目标”元素，它在冒泡过程中不会发生变化。
-- this —— 是“当前”元素，其中有一个当前正在运行的处理程序。
+- this —— 是“当前”元素，其中有一个当前正在运行的处理程序，是被监听了当前事件的那个元素。
 
 目标阶段在冒泡阶段和捕获阶段都会触发，事件上的多个监听器按其监听顺序执行
 
