--- a/_posts/生活/如何做好人生规划.md
+++ b/_posts/生活/如何做好人生规划.md
@@ -2,10 +2,12 @@
 每五年是一个人生计划，五年理解为一辈子。
 
 ### 确定目标
-通过学习，工作，生活等方面按优先级列出梦想清单，当下及未来想做的所有事。还找不到就模仿你想成为的人。
+通过学习，工作，生活等方面按**优先级**列出梦想清单，当下及未来想做的所有事。还找不到就模仿你想成为的人。
 
 ### 分解目标，倒推达成条件
 将梦想一步一步逆向分解到可执行环节（到最后执行环节可以稍微灵活点）。以目标为导向，反过来倒推达成条件。
+
+通往目标可能有多种路径，选择最符合实际情况的，此外可以预留备用的。
 
 #### 分解的原则
 如何把握分解的颗粒度来保证和评估你的目标是否靠谱呢？
