--- a/_posts/前端/react/2023-2-24-react.md
+++ b/_posts/前端/react/2023-2-24-react.md
@@ -13,6 +13,7 @@ tags:
 ## JSX
 - JSX 会移除行首尾的空格以及空行。与标签相邻的空行均会被删除，文本字符串之间的新行会被压缩为一个空格。
 - 布尔类型、Null 以及 Undefined 作为props.children将会忽略。这有助于依据特定条件来渲染其他的 React 元素。`{showHeader && <Header />}`。falsy仍会被渲染，确保表达式总是布尔值。[“falsy”](https://developer.mozilla.org/en-US/docs/Glossary/Falsy) 值
+- 自定义属性以 `data-` 开头
 
 ```javascript
 // 表达式
@@ -23,6 +24,9 @@ const element = <div tabIndex="0"></div>;
 // 表达式属性
 const element = <img src={user.avatarUrl}></img>;
 ```
+
+## style
+style 属性设置要传入一个对象，属性名要驼峰。
 
 ## 图片引入后可直接用在单括号内
 ```
@@ -85,7 +89,7 @@ function App2() {
 ## 组件
 组件名称必须以大写字母开头。 React 会将以小写字母开头的组件视为原生 DOM 标签。
 
-组件分为函数组件和类组件。函数组件是一个返回 jsx 的函数。类组件在 render 方法中返回 jsx。
+组件分为函数组件和类组件。函数组件是一个返回 jsx 的函数。类组件继承 `React.Component`，在 render 方法中返回 jsx。
 
 tsx 文件要引入 `react`，导出一个函数组件。
 
@@ -99,6 +103,18 @@ class Welcome extends React.Component {
   render() {
     // render 函数中可以访问 props
     return <h1>Hello, {this.props.name}</h1>;
+  }
+}
+```
+
+```tsx
+interface Props {
+}
+interface State {
+}
+class Cart extends React.Component<Props, State> {
+  constructor(props: Props) {
+    super();
   }
 }
 ```
@@ -128,27 +144,16 @@ class Modal extends Component {
 不会更改入参，且多次调用下相同的入参始终返回相同的结果。
 
 ## State
-- class组件中在constructor中为this.state赋初始值
+- class组件中只能在 constructor 中为 this.state 赋初始值
 - 通过this.setState()更新组件state
 - State的更新可能是异步的
 - State的更新会被合并
 
+`setState` 第一个参数可以传入对象或一个接收上一个 state 和 props 的函数，返回一个新对象更新数据。第二个参数是一个回调函数，更新完成后被调用。
 ```javascript
 this.setState(Object);
 this.setState((prevState, props) => Object);
 ```
-
-## 生命周期
-componentDidMount() 方法会在组件已经被渲染到 DOM 中后运行
-
-### shouldComponentUpdate
-如果你知道在什么情况下你的组件不需要更新，你可以在 shouldComponentUpdate 中返回 false 来跳过整个渲染过程。其包括该组件的 render 调用以及之后的操作。
-在大部分情况下，你可以继承 React.PureComponent 以代替手写 shouldComponentUpdate()。它用当前与之前 props 和 state 的浅比较覆写了 shouldComponentUpdate() 的实现。
-但他只进行浅比较，所以当 props 或者 state 某种程度是可变的话，那你就不能使用它了。
-
-### getDerivedStateFromProps
-getDerivedStateFromProps 会在调用 render 方法之前调用，即在渲染 DOM 元素之前会调用，并且在初始挂载及后续更新时都会被调用。
-该方法返回一个对象用于更新 state，如果返回 null 则不更新任何内容。
 
 ## 事件处理
 - React 事件的命名采用小驼峰式（camelCase），而不是纯小写。
@@ -428,9 +433,13 @@ class BlurExample extends React.Component {
     this.state = { isOpen: false };
     this.timeOutId = null;
 
+    // 不用bind就将函数设置为箭头函数
     this.onClickHandler = this.onClickHandler.bind(this);
     this.onBlurHandler = this.onBlurHandler.bind(this);
     this.onFocusHandler = this.onFocusHandler.bind(this);
+  }
+  
+  onClickHandler = () => {
   }
 
   onClickHandler() {
@@ -533,58 +542,6 @@ export { MyComponent as default } from "./ManyComponents.js";
 import React, { lazy } from 'react';
 const MyComponent = lazy(() => import("./MyComponent.js"));
 ```
-## Context
-Context 设计目的是为了共享那些对于一个组件树而言是“全局”的数据。
-使用 context, 我们可以避免通过中间元素传递 props：
-```javascript
-// Context 可以让我们无须明确地传遍每一个组件，就能将值深入传递进组件树。
-// 为当前的 theme 创建一个 context（“light”为默认值）。
-const ThemeContext = React.createContext('light');
-class App extends React.Component {
-  render() {
-    // 使用一个 Provider 来将当前的 theme 传递给以下的组件树。
-    // 无论多深，任何组件都能读取这个值。
-    // 在这个例子中，我们将 “dark” 作为当前的值传递下去。
-    return (
-      <ThemeContext.Provider value="dark">
-        <Toolbar />
-      </ThemeContext.Provider>
-    );
-  }
-}
-
-// 中间的组件再也不必指明往下传递 theme 了。
-function Toolbar() {
-  return (
-    <div>
-      <ThemedButton />
-    </div>
-  );
-}
-
-class ThemedButton extends React.Component {
-  // 指定 contextType 读取当前的 theme context。
-  // React 会往上找到最近的 theme Provider，然后使用它的值。
-  // 在这个例子中，当前的 theme 值为 “dark”。
-  static contextType = ThemeContext;
-  render() {
-    return <Button theme={this.context} />;
-  }
-}
-```
-### 使用 Context 之前的考虑
-Context 主要应用场景在于很多不同层级的组件需要访问同样一些的数据。请谨慎使用，因为这会使得组件的复用性变差。
-
-如果你只是想避免层层传递一些属性，[组件组合（component composition）](https://react.docschina.org/docs/composition-vs-inheritance.html)有时候是一个比 context 更好的解决方案。
-一种无需 context 的解决方案是将子组件自身传递下去，因而中间组件无需知道一些只有子组件需要的props
-
-### API
-https://react.docschina.org/docs/context.html#api
-- React.createContext
-- Context.Provider
-- Class.contextType
-- Context.Consumer
-- Context.displayName
 
 ## 错误边界
 错误边界是一种 React 组件，这种组件可以捕获并打印发生在其子组件树任何位置的 JavaScript 错误，并且，它会渲染出备用 UI，而不是渲染那些崩溃了的子组件树。
