--- a/_posts/前端/react/2023-2-24-react.md
+++ b/_posts/前端/react/2023-2-24-react.md
@@ -684,6 +684,8 @@ render() {
 
 HOC和包装组件之间的契约完全基于之间传递的 props。这种依赖方式使得替换 HOC 变得容易，只要它们为包装的组件提供相同的 prop 即可。
 
+with 开头
+
 ```javascript
 const CommentListWithSubscription = withSubscription(
   CommentList,
@@ -1051,58 +1053,6 @@ export default Index;
 useEffect 执行顺序：setCount 设置 => 在 DOM 上渲染 => useEffect 回调 => setCount 设置 => 在 DOM 上渲染。
 useLayoutEffect 执行顺序：setCount 设置 => useLayoutEffect 回调 => setCount 设置 => 在 DOM 上渲染。
 可以看出，useEffect 实际进行了两次渲染，这样就可能导致浏览器再次回流和重绘，增加了性能上的损耗，从而会有闪烁突兀的感觉。
-
-### useContext
-用于设置全局共享数据，跨组件层级共享。
-
-```javascript
-// context is createdBy createContext api
-// value: value passed to the closest context.Provider in component tree.
-// If there is no such provider, then the returned value will be the defaultValue you have passed to createContext for that context.
-const value = useContext(context);
-```
-
-```javascript
-import { useState, createContext, useContext } from "react";
-import { Button } from "antd";
-
-const CountContext = createContext(-1);
-
-const Index = () => {
-  const [count, setCount] = useState(0);
-
-  return (
-    <>
-      <div>父组件中的count：{count}</div>
-      <Button type="primary" onClick={() => setCount((v) => v + 1)}>
-        点击+1
-      </Button>
-      <CountContext.Provider value={count}>
-        <Child />
-      </CountContext.Provider>
-    </>
-  );
-};
-
-const Child = () => {
-  const countChild = useContext(CountContext);
-
-  return (
-    <div style={{ marginTop: 10 }}>
-      子组件获取到的count: {countChild}
-      <Son />
-    </div>
-  );
-};
-
-const Son = () => {
-  const countSon = useContext(CountContext);
-
-  return <div style={{ marginTop: 10 }}>孙组件获取到的count: {countSon}</div>;
-};
-
-export default Index;
-```
 
 ### useReducer
 `useReducer` 是单个组件的状态管理，跟 `useState` 相比是用于处理更复杂的状态变化。
