--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -103,15 +103,54 @@ tags:
 往返时间（RTT）：在计算机网络中，往返时间也是一个重要的性能指标，它表示从发送方发送数据开始，到发送方收到来自接收方的确认（接受方收到数据
 后便立即发送确认）总共经历的时间
 
+### 局域网
+按照网络覆盖范围划分，计算机网络可划分为局域网、城域网和广域网。
+
+局域网是有限区域内（如办公室）的多台计算机通过传输介质互连所组成的封闭网络。可实现数据通信和资源共享，具有较高的数据传输效率和较低的时延。
+
+802.3z 标准提到多模光纤，单模光纤 和 STP 相关的标准（数据传输速率达到千兆的标准）。802.ab 提到 UTP 相关标准。
+
+![1b903b9cfa892e1d1ccd65a1667e779](/img/计算机基础/网络拓扑结构.png)
+
+#### 网络拓扑结构
+##### 总线型
+1. 采用集线器。集线器内部采用一条总线进行数据的传输。
+2. 竞争式访问。同一时刻只允许一个用户进行信息的传递。
+3. 采用 CSMA/CD 机制。这个机制就是竞争式访问的协议。
+
+##### 星型
+交换机没特殊说明，默认为二层交换机，属于数据链路层。
+
+##### 环型（令牌环网）
+有令牌（token）就能发送数据。
+
+![50256d543a840d6442a88e98e200203](/img/计算机基础/网络类型.png)
+
+虽然上图显示以太网的缺点重负载延迟明显，但现在以太网发展迅速，数据延迟都很低了。
+
+##### 网状
+任何两个计算机之间都会有一条网线将他们连接。
+
 ### 以太网
 以太网是一种局域网技术，其规定了访问控制方法、传输控制协议、网络拓扑结构、传输速率等，完成数据链路层和物理层的一些内容，
 它采用一种称作CSMA/CD的媒体接入方法，另外的一些局域网技术，比如无线局域网等。
 
-交换机基于数据包的源MAC地址学习并存入MAC地址表。交换机MAC地址表的老化时间是300秒。
+#### 交换式以太网
+交换式以太网使用以太网交换机作为核心设备进行组网，与共享型局域网采用集线器等作为中间设备有所不同。
 
-转发方式：
-如果目标地址 (目的MAC)在MAC地址表中存在，则交换机将数据转发至该端口;如果没有，交换机就向除接收到该数据帧的端口外的其他所有端口广播该数据帧。
+数据转发方式：
 
+如果目标地址(目的MAC)在MAC地址表中存在，则交换机将数据转发至该端口;如果没有，交换机就向除接收到该数据帧的端口外的其他所有端口广播该数据帧。
+
+MAC地址表更新机制
+
+交换机基于数据包的源MAC地址学习并存入MAC地址表。如果交换机接收到的数据包其源地址在MAC地址表中没有，交换机学习该MAC地址并将其加入MAC地址表。
+
+交换机如果发现一个帧的入端口和MAC地址表中源MAC地址的所在端口不同，交换机将MAC 地址重新学习到新的端口。
+
+注意:交换机MAC地址表的老化时间是300秒:
+
+##### 数据转发机制
 交换机的三种交换模式：
 * 快速转发：交换机接收到（数据帧前14个字节，7个字节的帧前缀，1个字节的起始帧和6个字节的目的地址)也就立刻转发该数据帧，
 * 碎片丢弃：不保存整个数据帧，只需要接收64个字节，就开始转发数据帧，超过64个字节就视为碎片丢弃。
@@ -121,12 +160,14 @@ tags:
 交换式以太网使用以太网交换机作为核心设备进行组网，与共享型局域网采用集线器等作为中间设备有所不同。
 
 #### 数据帧格式
-从前往后：前导码（8字节）-目的地址（6字节）-源地址（6字节）-类型（2字节）-数据（46到1500字节）-帧校验序列（4字节），最小帧长64字节（不包括前导码）。
+从前往后：前导码（8字节）-目的地址（源MAC）（6字节）-源地址（目的MAC）（6字节）-类型（2字节）-数据（46到1500字节）-帧校验序列（4字节），最小帧长64字节（不包括前导码）。
 最小帧长是根据网络中检测冲突的最长时间确定的。
 
-### 局域网
-![1b903b9cfa892e1d1ccd65a1667e779](/img/计算机基础/网络拓扑结构.png)
-![50256d543a840d6442a88e98e200203](/img/计算机基础/网络类型.png)
+> 类型即可以表示数据字段长度也可以表示上层协议类型(2B)
+> 数据不足46字节会补足
+> 校验即CRC校验
+
+mac 地址采用6字节48比特位
 
 ### 网络协议
 网络协议是计算机网络和分布系统中互相通信间的对等层实体交换信息时必须遵守的规则的集合。
