--- a/_posts/前端/react/2023-2-24-react指南.md
+++ b/_posts/前端/react/2023-2-24-react指南.md
@@ -24,6 +24,9 @@ npm i typescript-plugin-css-modules --save-dev
 ### components
 components 下每个组件一个文件夹，文件夹内存放组件相关 css 和 tsx 文件，index.ts 文件导出当前组件。components 下也有 index.ts 导出全部组件。
 
+## i18next
+原生支持 typescript
+
 ## hooks
 ### 创建数据
 
@@ -102,6 +105,82 @@ declare module '*.css' {
     const css: {[key: string]: string};
     export default css;
 }
+```
+
+#### 最佳实践
+在 scss 中，嵌套的样式可以使用 `:global` 包裹除了根元素外的所有子元素，就不需要通过点语法去设置类，保持原来的字符串语法即可。
+
+例子：
+```scss
+.App {
+  text-align: center;
+  :global {
+    .App-logo {
+      height: 40vmin;
+      pointer-events: none;
+    }
+
+    @media (prefers-reduced-motion: no-preference) {
+      .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+      }
+    }
+
+    .App-header {
+      background-color: #282c34;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: calc(10px + 2vmin);
+      color: white;
+    }
+
+    .App-link {
+      color: #61dafb;
+    }
+
+    @keyframes App-logo-spin {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+  }
+}
+```
+
+```tsx
+import React from 'react';
+import logo from './logo.svg';
+import style from './App.module.scss';
+
+function App() {
+  return (
+    <div className={style.App}>
+      <header className="App-header">
+        <img src={logo} className="App-logo" alt="logo" />
+        <p>
+          Edit <code>src/App.tsx</code> and save to reload.
+        </p>
+        <a
+          className="App-link"
+          href="https://reactjs.org"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Learn React
+        </a>
+      </header>
+    </div>
+  );
+}
+
+export default App;
 ```
 
 ## 生命周期
