--- a/_posts/前端/小程序/2022-7-13-小程序总结.md
+++ b/_posts/前端/小程序/2022-7-13-小程序总结.md
@@ -148,10 +148,12 @@ function callAuthApi(permission, permissionName) {
 地址：https://apis.map.qq.com/ws/geocoder/v1/?location=latitude,longitude&key=
 
 ## 小程序登录流程
-`uni.getUserProfile` 或通过 `button-type="getPhoneNumber"` 的 button 拿到 encryptedData 和 iv，`uni.login` 拿到 
-code（getPhoneNumber可以直接拿到） 再用这三个作为参数，请求后台接口获取用户信息。
+通过 `button-type="getPhoneNumber"` 的 button 拿到的 encryptedData 和 iv（也可以不用这两个），`uni.login` 拿到的
+code（getPhoneNumber可以直接拿到） 作为参数，请求后台接口获取用户信息。
 
 如果内置的 webview 也需要登录，可以约定一个一次性 code，在获取用户信息时一并请求，作为地址传给 webview，让 webview 获取用户信息。
+
+`uni.getUserProfile` 已废弃，获取头像和昵称使用[头像昵称填写能力](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/userProfile.html)
 
 ## 获取用户手机号，头像和昵称方法
 
@@ -179,6 +181,8 @@ webview 安装 weixin-js-sdk 库，wx.miniProgram.postMessage
 面的分享信息。该函数需要返回一个对象自定义分享内容。
 2. 调用 uni.showShareMenu 传入自定义分享内容
 
+## 引用本地图片时使用绝对路径
+在 wxml 中，'/' 表示 '根目录'，文件夹，'/../assets', '/assets' 可以表示和 pages 同级的 assets 文件夹。
 
 ## 资料
 [1] https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/authorize.html
