--- a/_posts/前端/react/2023-2-24-react指南.md
+++ b/_posts/前端/react/2023-2-24-react指南.md
@@ -10,15 +10,25 @@ tags:
   - React
 ---
 ## 项目创建
-
+项目模板：
 ```shell
 npx create-react-app project-name --template typescript
 ```
 
-安装 css modules插件，安装后将 .module.css 文件引入后，可以将被引入的对象里面的类 
+安装 css modules插件，安装后将 .module.css 文件引入后，可以将被引入的对象里面的类，IDE 有提示。
 ```shell
 npm i typescript-plugin-css-modules --save-dev
 ```
+
+然后再创建声明文件 '*.d.ts'：
+```typescript
+declare module '*.css' {
+    const css: { [key: string]: string };
+    export default css;
+}
+```
+
+> 如果是 scss，就不需要安装这个了
 
 ## 项目结构
 ### components
@@ -108,7 +118,11 @@ declare module '*.css' {
 ```
 
 #### 最佳实践
-在 scss 中，嵌套的样式可以使用 `:global` 包裹除了根元素外的所有子元素，就不需要通过点语法去设置类，保持原来的字符串语法即可。
+在 scss 中，嵌套的样式可以使用 `:global` 包裹除了根元素外的所有子元素，就不需要通过点语法去设置类，保持原来的字符串语法即可。`@keyframe` 要改成：
+
+```scss
+@keyframes:global(name)  {}
+```
 
 例子：
 ```scss
