--- a/_posts/前端/小程序/2022-7-13-小程序总结.md
+++ b/_posts/前端/小程序/2022-7-13-小程序总结.md
@@ -148,14 +148,15 @@ function callAuthApi(permission, permissionName) {
 地址：https://apis.map.qq.com/ws/geocoder/v1/?location=latitude,longitude&key=
 
 ## 小程序登录流程
-通过 `button-type="getPhoneNumber"` 的 button 拿到的 encryptedData 和 iv（也可以不用这两个），`uni.login` 拿到的
+通过 `button-type="getPhoneNumber"` 的 button 或 `uni.getUserProfile` 拿到的 encryptedData 和 iv（也可以不用这两个），`uni.login` 拿到的
 code（getPhoneNumber可以直接拿到） 作为参数，请求后台接口获取用户信息。
+
+小程序开发者工具的 appid 要设置对应的小程序的 appid，否则 code 无效。
 
 如果内置的 webview 也需要登录，可以约定一个一次性 code，在获取用户信息时一并请求，作为地址传给 webview，让 webview 获取用户信息。
 
-`uni.getUserProfile` 已废弃，获取头像和昵称使用[头像昵称填写能力](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/userProfile.html)
-
 ## 获取用户手机号，头像和昵称方法
+`uni.getUserProfile` 已废弃，获取头像和昵称使用[头像昵称填写能力](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/userProfile.html)
 
 ```html
 <button open-type="getUserInfo" bindgetuserinfo="test"></button>
