--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -53,15 +53,15 @@ CPU的功能：
 控制器包括：
 程序计数器PC（也叫指令计数器）。存放指令，数据的地址。
 指令寄存器IR。根据程序计数器存放的地址取出指令后，存放在这。
-指令译码器。指令译码器翻译指令要做的事。
-时序部件。控制操作流程。
+指令译码器。指令译码器翻译指令要做的事，分析操作码，向控制器发出具体的控制信号。
+地址寄存器AR。保存当前 CPU 所访问的内存单元的地址，直到内存的读写操作完成。因为 CPU 和内存有着操作速度上的差异。
 
 > 指令包括操作码和地址码，地址码存的是这个指令用到的数据的地址。
 
 运算器包括：
 算术逻辑单元ALU。负责处理数据，算术运算和逻辑运算。
 累加寄存器。累加器，是一个通用寄存器。当ALU执行运算时，为其提供工作区，暂存数据，运算完成后放回累加器中。
-数据缓冲寄存器。在对内存储器进行读写操作时，暂存 cpu 和 主存间要传输的数据。
+数据缓冲寄存器。在对内存储器进行读写操作时，暂存 cpu 和 主存（内存）间要传输的数据。
 状态条件寄存器。存储一些算术指令和逻辑指令产生的状态标志和控制标志。
 
 例题：计算机执行指令的过程中，需要由CPU的控制器产生每条指令的操作信号并将信号送往相应的部件进行处理，以完成指定的操作。
