--- a/_posts/前端/HTML/2022-12-17-元素坐标和大小.md
+++ b/_posts/前端/HTML/2022-12-17-元素坐标和大小.md
@@ -65,7 +65,13 @@ let scrollHeight = Math.max( document.body.scrollHeight, document.documentElemen
 ```
 
 ### 显示像素比
-显示设备像素比 = 显示设备的物理像素分辨率 / 显示设备CSS像素分辨率
+物理像素/设备像素：显示器屏幕上的实际物理点
+
+CSS像素：浏览器用来渲染元素的标准单位
+
+设备像素比是指设备的物理像素和CSS像素之间的比例
+
+显示设备像素比 = 显示设备的物理像素 / 显示设备CSS像素
 
 显示分辨率 = 屏幕水平方向的像素点数 * 屏幕垂直方向的像素点数
 
